--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "generator-citrix-netscaler",
   "version": "1.3.0",
-  "description": "A .NET Core sample project to interacts with the Citrix Netscaler CPX docker container",
+  "description": ".NET Core sample projects that interacts with the Citrix Netscaler appliance via the Citrix NITRO APIs. This can use the Netscaler CPX docker container.",
   "homepage": "http://developer.citrix.com",
   "author": {
     "name": "John McBride",
